kubernetes/media/qBittorrent/08-qbittorrent-webui-headers.yaml
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: qbittorrent-webui-headers
  namespace: media
spec:
  headers:
    customRequestHeaders:
      Referer: ""
      Origin: ""
