kubernetes/media/qBittorrent/05-deployment-qBittorrent.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: qbittorrent
  namespace: media
spec:
  replicas: 1
  selector:
    matchLabels:
      app: qbittorrent
  template:
    metadata:
      labels:
        app: qbittorrent
    spec:
      containers:
      - name: qbittorrent
        image: linuxserver/qbittorrent:5.1.4
        imagePullPolicy: IfNotPresent
        resources:
          limits:
            memory: "2Gi"
          requests:
            memory: "512Mi"
        volumeMounts:
        - name: config
          mountPath: /config
        - name: media
          mountPath: /data
        ports:
        - containerPort: 8080
      volumes:
      - name: config
        persistentVolumeClaim:
          claimName: qbittorrent-config
      - name: media
        persistentVolumeClaim:
          claimName: media-root
