kubernetes/media/qBittorrent/06-svc-qBittorrent.yaml
apiVersion: v1
kind: Service
metadata:
  name: qbittorrent-lb
  namespace: media
  annotations:
    metallb.universe.tf/address-pool: khazadlab-pool   
spec:
  type: LoadBalancer
  externalTrafficPolicy: Local
  selector:
    app: qbittorrent
  ports:
  - name: web
    protocol: TCP
    port: 80            # WebUI/API externo
    targetPort: 8080    # puerto del contenedor
  - name: bt-tcp
    protocol: TCP
    port: 50413         # P2P TCP externo
    targetPort: 50413
  - name: bt-udp
    protocol: UDP
    port: 50413         # P2P UDP externo
    targetPort: 50413
  loadBalancerIP: 192.168.1.242  
---
apiVersion: v1
kind: Service
metadata:
  name: qbittorrent
  namespace: media
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: 8080
  selector:
    app: qbittorrent
