kubernetes/media/qBittorrent/09-FlareSolverr.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: flaresolverr
  namespace: media
spec:
  replicas: 1
  selector:
    matchLabels: { app: flaresolverr }
  template:
    metadata:
      labels: { app: flaresolverr }
    spec:
      containers:
      - name: flaresolverr
        image: ghcr.io/flaresolverr/flaresolverr:latest
        ports:
        - containerPort: 8191
---
apiVersion: v1
kind: Service
metadata:
  name: flaresolverr
  namespace: media
spec:
  selector: { app: flaresolverr }
  ports:
  - name: http
    port: 8191
    targetPort: 8191
