kubernetes/media/qBittorrent/10-ingress-qbittorrent.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: qbittorrent
  namespace: media
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`qbittorrent.khazadlab.es`)
      kind: Rule
      middlewares:
        - name: default-headers-media
          namespace: media
        - name: qbittorrent-webui-headers
          namespace: media
      services:
        - name: qbittorrent
          port: 80
          passHostHeader: false
  tls:
    secretName: tls-khazadlab-wildcard
